# Connect4

./: CMakeLists.txt  main.cpp
